# AKO-NPU

./: AKO-NPU-Overview.html  CHANGES.md  README.md
ako-npu/: .gitignore  CLAUDE.md  EXPERIMENTS.md  ITERATIONS.md  SETUP.md
ako-npu-practice/: .gitignore  PLOTS.md  README.md  REPORT.md
ako-npu-practice/cases/: COPY_RULES.md
ako-npu-practice/cases/AKO-NPU-run-add/: HINTS.md  ITERATIONS.md  README.md  TASK.md
ako-npu-practice/cases/AKO-NPU-run-attn-bwd/: .gitignore  ITERATIONS.md
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/: ITERATIONS.md  OPTIMIZE.md
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/: CMakeLists.txt  attention_backward.asc  output.txt
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_001/: ArithmeticUtilization.csv  PipeUtilization.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_002/: PipeUtilization.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_003/: ArithmeticUtilization.csv  PipeUtilization.csv  ResourceConflictRatio.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_004/: MemoryL0.csv  MemoryUB.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_005/: L2Cache.csv  PipeUtilization.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_006/: L2Cache.csv  Memory.csv  PipeUtilization.csv  summary.txt
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v2/trajectory/20260410_001824_iter-4/docs/perf/round_007/: L2Cache.csv  Memory.csv
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v4/: ITERATIONS.md
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v4/solution/: CMakeLists.txt  attention_backward.asc  attention_backward_tiling.h  gen_data.py  run.sh  verify_result.py
ako-npu-practice/cases/AKO-NPU-run-attn-bwd-v5/: ITERATIONS.md
ako-npu-practice/cases/AKO-NPU-run-attn-bwd/trajectory/20260408_225839_iter-1/: CMakeLists.txt  attention_backward.asc  output.txt
ako-npu-practice/cases/AKO-NPU-run-attn-bwd/trajectory/20260408_235454_iter-9/: CMakeLists.txt  output.txt
ako-npu-practice/cases/AKO-NPU-run-dsa-indexer-bwd/: ITERATIONS.md  README.md
ako-npu-practice/cases/AKO-NPU-run-dsa-indexer-bwd/solution/fused_elwise_kernel/: CMakeLists.txt  fused_elwise.asc
ako-npu-practice/cases/AKO-NPU-run-dsa-indexer-bwd/solution/fused_elwise_kernel/scripts/: gen_data.py
ako-npu-practice/cases/AKO-NPU-run-dsa-v5/: ITERATIONS.md  README.md  iter101_200_results.csv  iter11_sweep_results.csv  iter151_200_results.csv  iter20_l1_sweep.csv  iter2_sweep_results.csv  iter33_core_sweep.csv  iter36_depth.csv  iter3_sweep_results.csv  iter47_50_results.csv  iter51_80_results.csv  iter71_100_results.csv  iter81_100_results.csv
ako-npu-practice/cases/AKO-NPU-run-dsa-v5/trajectory/20260411_053912_iter-20-confirm/: CMakeLists.txt  dsa_indexer.asc  output.txt
ako-npu-practice/cases/AKO-NPU-run-dsa-v5/trajectory/20260411_062346_iter-27/: CMakeLists.txt  output.txt
ako-npu-practice/cases/AKO-NPU-run-lm-head/: ITERATIONS.md  sweep_baseM_W3_results.csv  sweep_baseN_results.csv
ako-npu-practice/cases/AKO-NPU-run-lm-head/solution/: CMakeLists.txt  lm_head_projection.asc  lm_head_projection.asc.debug  lm_head_projection.asc.sweep_backup
ako-npu-practice/cases/AKO-NPU-run-lm-head/solution/run_4150832/: demo
ako-npu-practice/cases/AKO-NPU-run-matmul-asc/: CLAUDE.md  ITERATIONS.md  OPTIMIZE.md  sweep38_results.txt
ako-npu-practice/cases/AKO-NPU-run-matmul-asc-v4/: CLAUDE.md  ITERATIONS.md  OPTIMIZE.md
ako-npu-practice/cases/AKO-NPU-run-matmul-asc-v4/scripts/sweep_tiling_cmake/: CMakeLists.txt
ako-npu-practice/cases/AKO-NPU-run-matmul-asc-v5/: ITERATIONS.md  sweep_results.csv
ako-npu-practice/cases/AKO-NPU-run-matmul-py-v4/: ITERATIONS.md  top_configs_results.csv
ako-npu-practice/cases/AKO-NPU-run-matmul-py-v5/: ITERATIONS.md  OPTIMIZE.md  algo_sweep_results.csv  batch_76_200_results.csv  creative_sweep_results.csv  extended_sweep_results.csv  final_batch_98_200_results.csv  final_sweep_results.csv  individual_iters_results.csv  mass_sweep_results.csv  matmul_config_sweep.csv  mega_sweep_results.csv  rapid_sweep_results.csv  sweep_results.csv
ako-npu-practice/cases/AKO-NPU-run-matmul-py-v5/solution/: CMakeLists.txt
ako-npu-practice/cases/AKO-NPU-run-matmul-py/trajectory/20260408_194812_iter-4/: CMakeLists.txt  matmul_leakyrelu.asc  output.txt
ako-npu-practice/cases/AKO-NPU-run-softmax/trajectory/20260408_161047_baseline/: CMakeLists.txt  output.txt  run.sh  softmax.asc
ako-npu-practice/cases/AKO-NPU-run-vae-residual/input/: CMakeLists.txt  run.sh  vae_residual_block.asc  vae_residual_block.py
ako-npu-practice/cases/AKO-NPU-run-vae-residual/input/scripts/: gen_data.py  verify_result.py
ako-npu-practice/data/: AKO-NPU-run-attn-bwd-v2.csv  AKO-NPU-run-attn-bwd-v4.csv  AKO-NPU-run-attn-bwd-v5.csv  AKO-NPU-run-attn-bwd.csv  AKO-NPU-run-dsa-indexer-bwd.csv  AKO-NPU-run-dsa-v5.csv  AKO-NPU-run-lm-head.csv  AKO-NPU-run-matmul-asc-v4.csv  AKO-NPU-run-matmul-asc-v5.csv  AKO-NPU-run-matmul-asc.csv  AKO-NPU-run-matmul-py-v4.csv  AKO-NPU-run-matmul-py-v5.csv  AKO-NPU-run-matmul-py.csv  AKO-NPU-run-softmax.csv
ako-npu-practice/experiments/big-matmul/: .gitignore  CMakeLists.txt  RESULTS.md  matmul_leakyrelu.asc  par16_run.sh  run_config.sh
ako-npu-practice/experiments/big-matmul/scripts/: gen_data.py
ako-npu-practice/scripts/: extract_csv.py  plot_trajectory.py
ako-npu/input/: dsa_indexer.py
skills/: .gitattributes  .gitignore  CHANGELOG.md  README.md
skills/.claude-plugin/: marketplace.json
skills/.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
skills/docs/: CONTRIBUTING.md  GOVERNANCE.md  STANDARDS.md  skills-usage.md
skills/infra/gitcode-issue-gen/: SKILL.md
skills/plugins-official/ops-direct-invoke-flash/operators/sqrt/: CMakeLists.txt  README.md  sqrt.asc  test_sqrt.py
skills/tests/: README.md  gate_check.sh  run-tests.sh
(+2187 files in other folders)
